# pheonyx

./: Cargo.toml
app/: flutter_rust_bridge.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/integration_test/: simple_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  app_bloc_observer.dart  main.dart
app/lib/connect/: connect.dart
app/lib/connect/cubits/: cubits.dart
app/lib/connect/models/: models.dart
app/lib/hub/: hub.dart
app/lib/hub/cubits/: cubits.dart
app/lib/hub/views/: mdns_view.dart  udp_view.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
app/lib/widgets/: icon_config_widget.dart  widgets.dart
app/linux/flutter/: generated_plugins.cmake
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/ios/: pheonyx_frb_client.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: pheonyx_frb_client.podspec
app/rust_builder/windows/: CMakeLists.txt
app/web/: manifest.json
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: main.cpp
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  mdns_server.rs  udp_client.rs  udp_server.rs
engine/src/utils/: constants.rs
example/: Cargo.toml
example/src/: mdns_client_to_server.rs  updserver_server_client_communication.rs
frb_client/: Cargo.toml
frb_client/src/: frb_generated.rs  main.rs
frb_client/src/api/: bridge.rs  mdns.rs  mod.rs  simple.rs  test.rs  udp_client.rs
(+19 files in other folders)
