[package]
name = "pheonyx"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["engine", "frb_client", "example"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ['derive'] }
anyhow = "1.0.97"
env_logger = "0.11.6"
futures-util = "0.3.31"
libmdns = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
delegate-attr = "0.3.0"
futures = "0.3.31"

